<resources>
    <string name="app_name">Closet Note</string>

    <string name="main_bottom_nav_menu_main">메인 메뉴</string>
    <string name="main_bottom_nav_menu_daily_look">데일리룩</string>
    <string name="main_bottom_nav_menu_setting">설정</string>
    <string name="main_bottom_nav_menu_wish_list">위시 리스트</string>

    <string name="size_created_time">생성일 : </string>
    <string name="size_modified_time">수정일 : </string>
    <string name="size_brand">Brand</string>
    <string name="size_name">Name</string>
    <string name="size_size">Size</string>
    <string name="size_https">https://</string>
    <string name="size_go">GO</string>
    <string name="size_memo">memo</string>
    <string name="size_brand_necessary_field">브랜드는 필수 입력 항목입니다.</string>
    <string name="size_name_necessary_field">이름은 필수 입력 항목입니다.</string>
    <string name="include_length">Length</string>
    <string name="include_shoulder">Shoulder</string>
    <string name="include_chest">Chest</string>
    <string name="include_sleeve">Sleeve</string>
    <string name="include_waist">Waist</string>
    <string name="include_thigh">Thigh</string>
    <string name="include_rise">Rise</string>
    <string name="include_hem">Hem</string>
    <string name="include_option_1">Option 1</string>
    <string name="include_option_2">Option 2</string>
    <string name="include_option_3">Option 3</string>
    <string name="include_option_4">Option 4</string>
    <string name="include_option_5">Option 5</string>
    <string name="include_option_6">Option 6</string>
    <string name="search_recent_search">최근 검색</string>
    <string name="search_no_result">검색 결과가 없습니다.</string>
    <string name="recent_search_no_result">최근 검색 목록이 없습니다.</string>
    <string name="recent_search_delete_all">전체 삭제</string>

    <string name="all_category_cap">CATEGORY</string>
    <string name="all_folder_cap">FOLDER</string>
    <string name="all_size_cap">SIZE</string>
    <string name="all_daily_look_cap">DAILY LOOK</string>
    <string name="all_wish_list_cap">WISH LIST</string>
    <string name="all_recycler_bin_cap">RECYCLER BIN</string>

    <string name="all_top_cap">TOP</string>
    <string name="all_bottom_cap">BOTTOM</string>
    <string name="all_outer_cap">OUTER</string>
    <string name="all_etc_cap">ETC</string>

    <string name="all_add_category">카테고리 추가</string>
    <string name="all_create_folder">폴더 생성</string>
    <string name="all_sort_order">정렬 순서</string>

    <string name="all_no_data">No Data</string>
    <string name="all_email">Email</string>


    <string name="item_folder_items">items</string>
    <string name="item_folder_item">item</string>

    <string name="menu_search">검색</string>
    <string name="menu_edit">수정</string>
    <string name="menu_delete">삭제</string>
    <string name="menu_restore">복원</string>
    <string name="menu_move">이동</string>
    <string name="menu_favorite">즐겨찾기</string>
    <string name="menu_menu">메뉴</string>
    <string name="menu_recycle_bin">휴지통</string>

    <string name="list_menu_view_type">보기 방식</string>

    <string name="action_mode_title">%1$d개 선택됨.</string>

    <string name="tree_title">이동할 위치를 선택하세요.</string>
    <string name="tree_current_position">(현재 위치)</string>
    <string name="tree_category">CATEGORY :</string>

    <string name="dialog_confirm">확인</string>
    <string name="dialog_cancel">취소</string>

    <string name="dialog_hint_category_name">Category Name</string>
    <string name="dialog_place_holder_category_name">카테고리 이름</string>

    <string name="dialog_hint_folder_name">Folder Name</string>
    <string name="dialog_place_holder_folder_name">폴더 이름</string>

    <string name="dialog_title_edit_category_name">카테고리 이름 변경</string>
    <string name="dialog_title_edit_folder_name">폴더 이름 변경</string>
    <string name="dialog_message_item_move">개의 아이템을 이동하시겠습니까?</string>
    <string name="dialog_message_selected_item_delete">개의 아이템을 휴지통으로 이동하시겠습니까?</string>
    <string name="dialog_et_max_length">30자까지 입력 가능합니다.</string>
    <string name="dialog_message_same_category_name_add">같은 이름의 카테고리가 존재합니다.\n그래도 추가하시겠습니까?</string>
    <string name="dialog_message_same_folder_name_add">같은 이름의 폴더가 존재합니다.\n그래도 추가하시겠습니까?</string>
    <string name="dialog_message_same_category_name_edit">같은 이름의 카테고리가 존재합니다.\n그래도 변경하시겠습니까?</string>
    <string name="dialog_message_same_folder_name_edit">같은 이름의 폴더가 존재합니다.\n그래도 변경하시겠습니까?</string>
    <string name="dialog_message_delete">휴지통으로 이동하시겠습니까?</string>
    <string name="dialog_message_go_back">저장되지 않았습니다.\n종료하시겠습니까?</string>
    <string name="dialog_message_image_clear">이미지를 삭제하시겠습니까?</string>
    <string name="dialog_message_recent_search_delete_all">최근 검색 목록을 모두 삭제하시겠습니까?</string>
    <string name="dialog_message_restore">개의 아이템을 복구하시겠습니까?</string>
    <string name="dialog_message_delete_forever">개의 아이템을 완전 삭제하시겠습니까?\n삭제 후 복구할 수 없습니다.</string>
    <string name="dialog_message_no_parent">\n\n위 아이템의 상위 디렉토리가 존재하지 않습니다.\n확인을 누르시면 \'복구됨\' 카테고리에 복구됩니다.</string>
    <string name="restore_category_name">복구됨</string>

    <string name="dialog_sort_custom">사용자 정의</string>
    <string name="dialog_sort_create">최근 생성 순</string>
    <string name="dialog_sort_create_reverse">최근 생성 역순</string>
    <string name="dialog_sort_brand">브랜드 순</string>
    <string name="dialog_sort_brand_reverse">브랜드 역순</string>
    <string name="dialog_sort_name">이름 순</string>
    <string name="dialog_sort_name_reverse">이름 역순</string>
    <string name="size_fragment_attach_picture">사진 첨부</string>
    <string name="sign_in_welcome">WELCOME!</string>
    <string name="sign_in_password">Password</string>
    <string name="sign_in">로그인</string>
    <string name="sign_in_or">or</string>
    <string name="sign_in_with_google">구글 이메일로 계속하기</string>
    <string name="sign_in_with_naver">네이버 아이디로 계속하기</string>
    <string name="sign_in_with_kakao">카카오 아이디로 계속하기</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="sign_in_find_password">비밀번호 찾기</string>
    <string name="sign_in_find_email">이메일 찾기</string>
    <string name="sign_in_sign_up_with_other_email"><u>다른 이메일로 회원가입</u></string>
    <string name="sign_in_email_is_empty">이메일을 입력해주세요.</string>
    <string name="sign_in_password_is_empty">비밀번호를 입력해주세요.</string>
    <string name="sgin_in_password_not_equal">비밀번호가 일치하지 않아요.</string>
    <string name="sing_up_username_is_empty">이름을 입력해주세요.</string>
    <string name="sgin_up_email_is_badly_formatted">이메일이 유효하지 않아요.</string>
    <string name="sign_up_password_is_less_than_6">최소 6자 이상이어야 해요.</string>
    <string name="sign_up_email_is_used">이미 사용중인 이메일이에요.</string>
    <string name="sign_up_fail">알 수 없는 이유로 가입에 실패했어요.</string>
    <string name="sign_up_username">Username</string>
    <string name="sign_up_confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_canceled">가입이 취소됐어요.</string>
    <string name="sign_up_success">가입에 성공했어요.</string>
    <string name="verification_send_email">가입하신 이메일로 인증 메일을 보냈어요.\n메일함을 확인해주세요.\n메일이 보이지 않는다면\n휴지통 혹은 스팸메일함을 확인해 주세요.</string>
    <string name="verification_please_verify">이메일을 인증해 주세요.</string>
    <string name="verification_verify">인증하기</string>
    <string name="sign_in_please_verify">이메일이 인증되지 않았어요. 이메일을 확인해주세요.</string>
    <string name="sign_up_forgot_password"><u>비밀번호를 잊어버리셨나요?</u></string>
    <string name="reset_password_cancled">취소되었어요.</string>
    <string name="reset_password_not_exsist_email">가입된 이메일이 존재하지 않아요.</string>
    <string name="send_reset_password_email_lets_check">확인하기</string>
    <string name="send_reset_password_email_please_check_email">입력하신 이메일로\n비밀번호 재설정 메일이 전송되었어요.\n메일함을 확인해 주세요.</string>
    <string name="reset_password_next">다음</string>
    <string name="reset_password">비밀번호 재설정</string>
    <string name="sign_in_anonymously"><u>비회원으로 시작하기</u></string>
    <string name="sign_in_slash">/</string>
    <string name="re_verification_resend">재전송</string>
    <string name="re_verification_please_check_email">이메일 인증이 확인되지 않았어요.\n메일함을 확인해 주세요.\n메일이 보이지 않는다면\n휴지통 혹은 스팸메일함을 확인해 주세요.</string>
    <string name="sign_in_check_email_or_password">비밀번호 혹은 이메일이 올바르지 않아요.</string>
    <string name="sign_in_not_exist_email">가입된 이메일이 존재하지 않아요.</string>
    <string name="facebook_app_id">331124008510777</string>
    <string name="fb_login_protocol_scheme">fb331124008510777</string>

    <string name="naver_client_id">R7D_EUivu6CPSTLpzzkp</string>
    <string name="naver_client_secret">0sBCSITgqA</string>
    <string name="naver_profile_api_url">https://openapi.naver.com/v1/nid/me</string>
    <string name="firebase_dynamic_link">https://closetnote.page.link/verify</string>
    <string name="kakao_native_key">2d3aadea523ac7b61f93b71a94f20b20</string>

    <string name="deep_link_sign_in">https://www.colosetnote.com/signin</string>
    <string name="settings_account">Account</string>
    <string name="settings_all_cap">SETTINGS</string>
    <string name="settings_global">Global</string>
    <string name="settings_theme">테마 설정</string>
    <string name="settings_network">네트워크 설정</string>
    <string name="settings_etc">etc</string>
    <string name="settings_contact">문의하기</string>
    <string name="settings_sign_out">로그아웃</string>
    <string name="anonymously_sing_out">비회원은 데이터가 저장되지 않아요.\n 그래도 로그아웃 할까요?</string>
    <string name="setting_switch_to_member">회원으로 전환하기</string>
    <string name="setting_anonymously">비회원</string>
    <string name="anonymously_sign_up_choose_sign_up_method">가입방법을 선택해주세요.</string>
    <string name="all_google">Google</string>
    <string name="all_naver">Naver</string>
    <string name="all_kakao">kakao</string>

    <string name="account_edit_name">변경할 이름을 입력해 주세요.</string>
    <string name="account_change_password">패스워드 변경</string>
    <string name="account_edit_profile">프로필 수정</string>

    <!--    toasts-->
    <string name="toast_sign_in_success">로그인 되었어요.</string>
    <string name="toast_google_sign_in_success">구글 이메일로 로그인 되었어요.</string>
    <string name="toast_naver_sign_in_success">네이버 아이디로 로그인 되었어요.</string>
    <string name="toast_kakao_sign_in_success">카카오 아이디로 로그인 되었어요.</string>
    <string name="toast_sign_in_anonymously_success">비회원으로 로그인 되었어요.</string>
    <string name="toast_google_sign_in_fail">구글 로그인에 실패했어요.</string>
    <string name="toast_naver_sign_in_fail">네이버 로그인에 실패했어요.</string>
    <string name="toast_kakao_sign_in_fail">카카오 로그인에 실패했어요.</string>
    <string name="toast_sign_in_anonymously_fail_">비회원 로그인에 실패하였어요.</string>
    <string name="toast_exist_email_google">이미 존재하는 이메일이에요.\n구글 로그인을 이용해 주세요.</string>
    <string name="toast_exist_email_naver">이미 존재하는 이메일이에요.\n네이버 로그인을 이용해 주세요.</string>
    <string name="toast_exist_email_kakao">이미 존재하는 이메일이에요.\n카카오 로그인을 이용해 주세요.</string>
    <string name="toast_link_with_google_success">구글 이메일로 연동 되었어요.</string>
    <string name="toast_link_with_naver_success">네이버 아이디와 연동되었어요.</string>
    <string name="toast_link_with_kakao_success">카카오 아이디와 연동되었어요.</string>
    <string name="toast_sign_out_seccess">로그아웃 되었어요</string>
    <string name="toast_send_verification_mail_success">인증메일이 전송되었어요.\n메일함을 확인해 주세요.</string>
    <string name="toast_send_verification_mail_fail">인증메일 전송에 실패했어요.\n로그인 후 재인증 하시거나, 관리자에게 문의해주세요.</string>
    <string name="toast_re_send_verification_mail">메일이 재전송 되었어요.</string>
    <string name="toast_fail_unknown_error">알 수 없는 이유로 실패했어요.\n 관리자에게 문의해주세요.</string>
    <string name="toast_check_network">네트워크 연결상태가 확인되지 않아요.\n연결상태를 확인해 주세요.</string>
    <string name="toast_kakao_sing_in_fail_permissioon">카카오 정보 권한이 없어 연동에 실패하였어요.</string>
    <string name="toast_username_update_fail">닉네임 업데이트에 실패했어요.\n 로그인 후 닉네임을 변경해주세요.</string>
    <string name="toast_profile_update_fail">정보연동에 실패하였어요.\n 로그인하여 닉네임과 이메일을 수정해주세요.</string>
    <string name="toast_too_many_request">요청을 처리하지 못했어요.\n잠시 후 다시 시도해주세요.</string>
    <string name="toast_not_allow_to_anonymously">비회원은 이용할 수 없어요.</string>
</resources>