<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menu_list_search"
        android:icon="@drawable/icon_search"
        android:title="@string/menu_search"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_list_favorite"
        android:icon="@drawable/icon_favorite_border"
        android:title="@string/menu_favorite"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_list_view_type"
        android:icon="@drawable/icon_list"
        android:title="@string/list_menu_view_type"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/menu_list_popup"
        android:icon="@drawable/icon_popup_menu"
        android:title="@string/menu_menu"
        app:showAsAction="always" />
</menu>