<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            android:background="?myColorControl" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radioBtnCustom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:button="@drawable/radio_button"
            android:paddingStart="@dimen/_4sdp"
            android:paddingEnd="0dp"
            android:text="@string/dialog_sort_custom"
            android:textSize="@dimen/_11sdp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioBtnCreate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_weight="1"
                android:button="@drawable/radio_button"
                android:paddingStart="@dimen/_4sdp"
                android:paddingEnd="0dp"
                android:text="@string/dialog_sort_create"
                android:textSize="@dimen/_11sdp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioBtnCreateReverse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_weight="1"
                android:button="@drawable/radio_button"
                android:paddingStart="@dimen/_4sdp"
                android:paddingEnd="0dp"
                android:text="@string/dialog_sort_create_reverse"
                android:textSize="@dimen/_11sdp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioBtnBrand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_weight="1"
                android:button="@drawable/radio_button"
                android:paddingStart="@dimen/_4sdp"
                android:paddingEnd="0dp"
                android:text="@string/dialog_sort_brand"
                android:textSize="@dimen/_11sdp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioBtnBrandReverse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_weight="1"
                android:button="@drawable/radio_button"
                android:paddingStart="@dimen/_4sdp"
                android:paddingEnd="0dp"
                android:text="@string/dialog_sort_brand_reverse"
                android:textSize="@dimen/_11sdp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioBtnName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_weight="1"
                android:button="@drawable/radio_button"
                android:paddingStart="@dimen/_4sdp"
                android:paddingEnd="0dp"
                android:text="@string/dialog_sort_name"
                android:textSize="@dimen/_11sdp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radioBtnNameReverse"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12sdp"
                android:layout_weight="1"
                android:button="@drawable/radio_button"
                android:paddingStart="@dimen/_4sdp"
                android:paddingEnd="0dp"
                android:text="@string/dialog_sort_name_reverse"
                android:textSize="@dimen/_11sdp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>