<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4sdp"
            app:cardCornerRadius="@dimen/_4sdp"
            app:cardElevation="@dimen/_4sdp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_popup_list_create_folder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8sdp"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_28sdp"
                    android:text="@string/all_create_folder"
                    android:textSize="@dimen/_11sdp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_popup_list_sort_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8sdp"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_28sdp"
                    android:text="@string/all_sort_order"
                    android:textSize="@dimen/_11sdp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_popup_list_recycle_bin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8sdp"
                    android:paddingStart="@dimen/_12sdp"
                    android:paddingEnd="@dimen/_28sdp"
                    android:text="@string/menu_recycle_bin"
                    android:textSize="@dimen/_11sdp" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>
</layout>
