<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.leebeebeom.closetnote.ui.signin.SignInFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout style="@style/myMatchWrap">

        <com.google.android.material.button.MaterialButton
            style="@style/mySignInButton"
            android:id="@+id/btnGoogle"
            android:drawableLeft="@drawable/icon_google"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            android:onClick="@{() -> fragment.googleSignIn()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/black"
            tools:ignore="RtlHardcoded" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNaver"
            style="@style/mySignInButton"
            android:drawableLeft="@drawable/icon_naver_small"
            android:onClick="@{() -> fragment.naverSignIn()}"
            android:text="@string/sign_in_with_naver"
            android:textColor="@color/white"
            app:backgroundTint="#03C75A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnGoogle"
            app:strokeColor="@android:color/transparent"
            tools:ignore="RtlHardcoded" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnKakao"
            style="@style/mySignInButton"
            android:drawableLeft="@drawable/icon_kakao_small"
            android:text="@string/sign_in_with_kakao"
            android:textColor="@color/black"
            app:backgroundTint="#FEE500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="@{() -> fragment.kakaoSignIn()}"
            app:layout_constraintTop_toBottomOf="@id/btnNaver"
            app:strokeColor="@android:color/transparent"
            tools:ignore="RtlHardcoded" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>